# NORbert

./: .gitignore  Makefile  README.md  build.tcl  flake.nix  ft2232h.conf  spi_flash.gprj  tangprimer25k.cst  tangprimer25k.sdc
.github/workflows/: ci.yml  deploy-web.yml  release.yml
docs/: 1bit-sd-card-plan.md
pico-firmware/: Cargo.toml  README.md
pico-firmware/.cargo/: config.toml
pico-firmware/firmware/: Cargo.toml  build.rs
pico-firmware/firmware/src/: bridge.rs  ft245_bus.rs  main.rs
pico-firmware/protocol/: Cargo.toml
pico-firmware/protocol/src/: lib.rs
src/: fifo.v  ft245.v  glue.v  logger.v  pll.v  sd_card_1bit.v  sdram.v  spi_trx.v  top.v  uart.v  util.v
tb/: sd_card_tb.v
tool/: Cargo.toml  Trunk.toml  build.rs  index.html
tool/chips/vendors/: winbond.ron
tool/src/: chip.rs  cli.rs  commands.rs  device.rs  gowin.rs  lib.rs  main.rs  protocol.rs  sfdp.rs  transport.rs  web_main.rs
tool/src/commands/: diagnostics.rs  monitor.rs
