[workspace]
members = ["protocol", "firmware"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
defmt = "1"
heapless = "0.8"
postcard = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["derive"] }
static_cell = "2"
