[workspace]
members = ["protocol", "firmware"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
defmt = "1.1.0"
heapless = "0.9.3"
postcard = { version = "1.1.3", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
static_cell = "2.1.1"
zerocopy = { version = "0.8.52", default-features = false }
