[package]
name = "norbert-tool"
version = "0.2.0"
edition = "2024"
description = "Tool for loading data into the Tang Primer 25K SPI Flash Emulator (UART + FT245)"

[features]
default = ["ftdi"]
d2xx = ["libftd2xx"]
ftdi = ["dep:ftdi"]

[dependencies]
serialport = "4.3"
libftd2xx = { version = "0.32", optional = true }
ftdi = { package = "ftdi-nusb", version = "0.1.0", optional = true }
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
ron = "0.8"
ctrlc = "3.4"
