[package]
name = "spi-flash-tool"
version = "0.2.0"
edition = "2024"
description = "Tool for loading data into the Tang Primer 25K SPI Flash Emulator (UART + FT245)"

[features]
default = ["ftdi"]
d2xx = ["libftd2xx"]
ftdi = ["dep:ftdi"]

[dependencies]
serialport = "4.9"
libftd2xx = { version = "0.33", optional = true }
ftdi = { package = "ftdi-nusb", version = "0.1.0", optional = true }
clap = { version = "4.6", features = ["derive"] }
anyhow = "1.0"
indicatif = "0.18"
rflasher-chips = { git = "https://github.com/ArthurHeymans/rflasher.git", rev = "1879f3819cb4f3d9fde76447198346cae3e2b40d", features = ["static-chips"] }
ctrlc = "3.5"
zerocopy = { version = "=0.8.55", features = ["derive"] }
