[package]
name = "norbert-pico-firmware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Embassy firmware for a Raspberry Pi Pico NORbert USB/Ethernet bridge"

[features]
default = []
ethernet = []

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = { workspace = true }
defmt-rtt = "1.2.0"
embassy-embedded-hal = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.2"
embassy-net = { version = "0.9.1", features = ["defmt", "dhcpv4", "medium-ethernet", "tcp"] }
embassy-net-wiznet = { version = "0.3.0", features = ["defmt"] }
embassy-rp = { version = "0.10.0", features = ["critical-section-impl", "defmt", "rp2040", "time-driver"] }
embassy-sync = "0.8.0"
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }
embedded-hal-bus = { version = "0.3.0", features = ["async"] }
embedded-io-async = "0.7.0"
heapless = { workspace = true }
norbert-pico-protocol = { path = "../protocol", features = ["defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
portable-atomic = { version = "1.13.1", features = ["critical-section"] }
static_cell = { workspace = true }
zerocopy = { workspace = true }
